--- a/styles/global.css
+++ b/styles/global.css
@@ -21,9 +21,8 @@
     --color-black : #2992f4;
     --color-goldenrod : #e74900;
     --color-pink : #ff078f;
-    background: linear-gradient(90deg, rgb(163, 241, 255),rgb(255, 196, 132), rgb(255, 193, 239), rgb(255, 173, 243));
     
-    
+    background: linear-gradient(43deg, rgb(207, 212, 255) 0%, rgb(200, 80, 192) 46%, rgb(255, 204, 112) 100%);
   }
   
   #root{
@@ -256,11 +255,16 @@
       flex-direction: column;
     }
     .card2{
-      width: 95% !important;
+      width: 98% !important;
+      margin-left: 0rem !important;
     }
     .box1{
-      width: 119% !important;
-      height: 25rem !important;
+      width: 70% !important;
+      height: 70% !important;
+    }
+    .imgslider-box{
+      width: 118% !important;
+      height: 27rem !important;
     }
   
   .tab{
@@ -782,7 +786,7 @@
     z-index: -1;
     border-radius: 1em;
     filter: blur(20px);
-    animation: animate 5s linear infinite;
+    
   }
   
   @keyframes animate {
@@ -1118,11 +1122,18 @@
   transform: scale(1.1) rotateX(10deg);
   
  }
+ .feedback-card{
+  display: flex;
+  width: 99%;
+  
+  
+}
+
  .card2 {
   position: relative;
   width: 22%;
+  margin: 1.3rem;
   height: 20rem;
-  margin: 1rem;
   background: lightgrey;
   border-radius: 30px;
   overflow: hidden;
@@ -1130,13 +1141,16 @@
   transition: all 1s ease-in-out;
   border: 2px solid rgb(255, 255, 255);
 }
-.feedback-card{
-  display: flex;
-  width: 100%;
+.imgslider-box{
+  
+    width:130%;
+    height: 37rem;
+    overflow: hidden;
+    position: relative;
+    border-radius: 2rem;
+    
   
 }
-
-
 .background {
   position: absolute;
   inset: 0;
@@ -1152,22 +1166,16 @@
   transition: all 0.6s ease-in-out;
   font-size: 1.3em;
   font-weight: 600;
-  color: #35ffff;
+  color: #ffffff;
   letter-spacing: 3px;
 }
-
 
 .logo .logo-svg {
   fill: white;
   width: 3rem;
   height: 3rem;
 }
-.team-name{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.3rem;
-}
+
 .icon {
   display: inline-block;
   width: 4rem;
@@ -1209,12 +1217,10 @@
 }
 
 .box1 {
-  width:130%;
-  height: 37rem;
-  overflow: hidden;
-  position: relative;
-  border-radius: 2rem;
-  
+  width: 70%;
+  height: 70%;
+  bottom: -70%;
+  left: -70%;
 }
 
 .box1::before {
@@ -1222,7 +1228,7 @@
 }
 
 .box1:hover::before {
-  opacity: 1;
+  opacity: 1; 
 }
 
 .box1:hover .icon .svg {
@@ -1443,7 +1449,6 @@ justify-content: space-around;
   width: 43%;
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 0.5rem;
   border-radius: 1rem;
   display: flex;
 }
@@ -1532,7 +1537,7 @@ justify-content: space-around;
   width: 100%;
   height: 15.7rem;
   border-radius: 14px;
-  z-index: 1111;
+  z-index: 11;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -1546,8 +1551,8 @@ justify-content: space-around;
   position: absolute;
   top: 5px;
   left: 5px;
-  width: 99%;
-  height: 15rem;
+  width: 93%;
+  height: 13rem;
   padding: 1rem;
   z-index: 2;
   background: rgba(255, 255, 255, .95);
