--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,13 @@
-@import url("https://fonts.googleapis.com/css?family=Sofia");
 
+
+
+
+
+@import url("https://fonts.googleapis.com/css?family=Sofia");
+/* styles/tailwind.css */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 
 
@@ -21,15 +29,10 @@
     --color-black : #2992f4;
     --color-goldenrod : #e74900;
     --color-pink : #ff078f;
-    background: linear-gradient(43deg, rgb(207, 212, 255) 0%, rgb(200, 80, 192) 46%, rgb(255, 204, 112) 100%);
+    background: linear-gradient(43deg, rgb(50, 52, 65) 0%, rgb(200, 80, 192) 46%, rgb(255, 204, 112) 100%);
   }
   
-  #root{
-    
-    
-    
-  
-  }
+ 
 
 
   /*______ Display Card________*/
@@ -88,7 +91,7 @@
     left: 0;
     position: fixed;
     box-shadow: 1rem 1rem 2rem rgb(89, 0, 94);
-    background: linear-gradient(43deg, rgb(255, 255, 255) 0%, rgb(255, 121, 233) 46%, rgb(255, 181, 70) 100%);
+    background: linear-gradient(43deg, rgb(26, 25, 33) 0%, rgb(255, 121, 233) 46%, rgb(255, 181, 70) 100%);
     
   }
   .part3{
@@ -343,6 +346,7 @@
     &:hover{
       border: 2px solid var(--bg-color);
       cursor: pointer;
+      padding: 5px;
       
     }
   }
@@ -370,7 +374,7 @@
     color: rgb(0, 0, 0);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 700;
-    -webkit-background-clip: text;
+    background-clip: text;
   text-fill-color: transparent;
   animation: shine 3s linear infinite !important;
     text-shadow: 
@@ -440,7 +444,7 @@
     justify-content: center;
     height: 3rem;
     border-radius: 2rem;
-    text-shadow: 0.3rem 0.3rem 1rem rgb(255, 153, 0);
+    text-shadow: 0.1rem 0.1rem 0.1rem rgb(255, 0, 43);
   }
   .hp-text{
     font-family: sofia, sans-serif;
@@ -449,8 +453,8 @@
   .s1-inside p {
     font-size: 1.2rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: var(--font-color);
-    text-shadow: 0.1rem 0.1rem 0.1rem rgb(0, 0, 0);
+    
+    text-shadow: 0.1rem 0.1rem 1rem rgb(0, 0, 0);
   }
   
   .s1-img{
@@ -486,12 +490,7 @@
   
   
   
-  .bottom {
-    color: var(--font-color);
-    display: flex;
-    margin: 2rem;
-    justify-content: space-between;
-  }
+  
   
   .contact {
     align-items: center;
@@ -503,11 +502,7 @@
     align-items: center;
   }
   
-  .address-div {
-    color: var(--font-color);
-    text-align: center;
-    margin-left: 2rem;
-  }
+  
   
   .imgt {
     width: 1.4rem;
@@ -563,9 +558,7 @@
       width: 100% !important;
       height: 23rem !important;
     }
-    .myCard1{
-      
-    }
+    
     
     .wholecontainer {
       display: flex;
@@ -1569,8 +1562,8 @@ border-radius: 2rem;
   position: absolute;
   top: 5px;
   left: 5px;
-  width: 93%;
-  height: 13rem;
+  width: 98%;
+  height: 15rem;
   padding: 1rem;
   z-index: 2;
   background: rgba(255, 255, 255, .95);
