--- a/styles/globals.css
+++ b/styles/globals.css
@@ -283,3 +283,194 @@
     opacity: 0.3;
   }
 }
+
+.card2 {
+  position: relative;
+  width: 22%;
+  margin: 1.3rem;
+  height: 20rem;
+  background: lightgrey;
+  border-radius: 30px;
+  overflow: hidden;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  transition: all 1s ease-in-out;
+  border: 2px solid rgb(255, 255, 255);
+}
+
+.background {
+  position: absolute;
+  inset: 0;
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+}
+.team-img{
+  width: 12rem;
+  height: 12rem;
+  border-radius: 50%;
+  transform: scale(1.1) rotateX(10deg);
+  
+ }
+ .services-div{
+  display: flex;
+  flex-wrap: wrap;
+  width: 90%;
+  margin-left: 1.3rem;
+  border-radius: 2rem;
+  justify-content: space-around;
+}
+
+.logo {
+  position: absolute;
+  right: 50%;
+  bottom: 50%;
+  transform: translate(50%, 50%);
+  transition: all 0.6s ease-in-out;
+  font-size: 1.3em;
+  font-weight: 600;
+  color: #ffffff;
+  letter-spacing: 3px;
+}
+
+.logo .logo-svg {
+  fill: white;
+  width: 3rem;
+  height: 3rem;
+}
+
+.icon {
+  display: inline-block;
+  width: 4rem;
+  justify-content: space-between;
+  height: 4rem;
+}
+
+.icon .svg {
+  fill: rgba(255, 255, 255, 0.797);
+  width: 50%;
+  height: 50%;
+  transition: all 0.5s ease-in-out;
+}
+
+.box {
+  position: absolute;
+  padding: 10px;
+  text-align: right;
+  background: rgba(255, 255, 255, 0.389);
+  border-top: 2px solid rgb(255, 255, 255);
+  border-right: 1px solid white;
+  border-radius: 10% 13% 42% 0%/10% 12% 75% 0%;
+  box-shadow: rgba(100, 100, 111, 0.364) -7px 7px 29px 0px;
+  transform-origin: bottom left;
+  transition: all 1s ease-in-out;
+}
+
+.box::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+}
+
+.box:hover .svg {
+  fill: white;
+}
+
+.box1 {
+  width: 70%;
+  height: 70%;
+  bottom: -70%;
+  left: -70%;
+}
+
+.box1::before {
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #ff53d4 60%, #62c2fe 90%);
+}
+
+.box1:hover::before {
+  opacity: 1; 
+}
+
+.box1:hover .icon .svg {
+  filter: drop-shadow(0 0 5px white);
+}
+
+.box2 {
+  width: 50%;
+  height: 50%;
+  bottom: -50%;
+  left: -50%;
+  transition-delay: 0.2s;
+}
+
+.box2::before {
+  background: radial-gradient(circle at 30% 107%, #91e9ff 0%, #00ACEE 90%);
+}
+
+.box2:hover::before {
+  opacity: 1;
+}
+
+.box2:hover .icon .svg {
+  filter: drop-shadow(0 0 5px white);
+}
+
+.box3 {
+  width: 30%;
+  height: 30%;
+  bottom: -30%;
+  left: -30%;
+  transition-delay: 0.4s;
+}
+
+.box3::before {
+  background: radial-gradient(circle at 30% 107%, #969fff 0%, #b349ff 90%);
+}
+
+.box3:hover::before {
+  opacity: 1;
+}
+
+.box3:hover .icon .svg {
+  filter: drop-shadow(0 0 5px white);
+}
+
+.box4 {
+  width: 10%;
+  height: 10%;
+  bottom: -10%;
+  left: -10%;
+  transition-delay: 0.6s;
+}
+.card2:hover {
+  transform: scale(1.1);
+}
+
+.card2:hover .box {
+  bottom: -1px;
+  left: -1px;
+}
+
+.card2:hover .logo {
+  transform: translate(70px, -52px);
+  letter-spacing: 0px;
+}
+@media(max-width:767px) {
+
+  .card2{
+    width: 98% !important;
+    margin-left: 0rem !important;
+  }
+  .box1{
+    width: 70% !important;
+    height: 70% !important;
+  }
+  .services-div{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  
+
+}
